--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,9 @@ quarkus.smallrye-openapi.info-version=1.0.0
 quarkus.smallrye-openapi.info-description=Dokumentation der Schnittstelle des Übungsprojekts Punchclock
 
 quarkus.http.cors=true
+
+mp.jwt.verify.publickey.location=publicKey.pem
+mp.jwt.verify.issuer=https://example.com/issuer 
+smallrye.jwt.sign.key.location=privateKey.pem
+
+quarkus.native.resources.includes=publicKey.pem 
